[package]
name = "nhd"
version = "0.1.0"
authors = ["Ikyro <ikyroch@gmail.com>"]
description = "Fazt cli to download nhentai doujins"
edition = "2021"
license = "MIT"
repository = "https://github.com/ikyro/nhd"
exclude = [ "docs/" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
requestty = "0.4.1"
clap = { version = "4.1.1", features = ["derive"] }
serde_json = "1.0.91"
dirs = "4.0.0"
futures = "0.3"
